--- a/static/form.html
+++ b/static/form.html
@@ -5,6 +5,12 @@
     <title>Form</title>
 </head>
 <body>
-    
+    <div>
+        <form method="POST" action="/form">
+            <label for="">Name</label><input name="name" type="text" value=""/>
+            <label for="">Address</label><input name="address" type="text" value=""/>
+            <input type="submit" value="submit"/>
+        </form>
+    </div>
 </body>
 </html>
