--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Websocket</title>
 </head>
 <body>
-    
+    <div class="center">
+        <h1>Acron Project </h1>
+        <h3 id="chat-header">Currently in chat: general</h3>
+
+        <form id="chatroom-selection">
+            <label for="chatroom">chatroom</label>
+            <input type="text" id="chatroom" name="chatroom"><br><br>
+            <input type="submit" value="Change chatroom">
+        </form>
+
+    </div>    
 </body>
 </html>
