--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -14,6 +14,13 @@
             <input type="submit" value="Change chatroom">
         </form>
 
+        <br>
+
+        <textarea class="messagearea" readonly name="chatmessages" id="chatmessages" cols="50" rows="4"
+                  placeholder="Wellcome to chatroom"></textarea>
+        
+        <br>
+        
     </div>    
 </body>
 </html>
