Create the other form

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -20,6 +20,11 @@
                   placeholder="Wellcome to chatroom"></textarea>
         
         <br>
+
+        <form id="chatroom-messages">
+            <label for="message">Message:</label>
+            <input type="text" id="">
+        </form>
         
     </div>    
 </body>
