Insert JavaScript codes

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -23,9 +23,15 @@
 
         <form id="chatroom-messages">
             <label for="message">Message:</label>
-            <input type="text" id="">
+            <input type="text" id="message" name="message"><br>
+            <input type="submit" value="Send message">
         </form>
+    </div>
+    
+    <script>
+        var selected_chat = "general";
+
         
-    </div>    
+    </script>
 </body>
 </html>
