Create function changeChatRoom

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -31,7 +31,9 @@
     <script>
         var selected_chat = "general";
 
-        
+        function changeChatRoom(){
+            
+        }
     </script>
 </body>
 </html>
