Implement function sendMessage

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -40,10 +40,14 @@
         }
 
         function sendMessage(){
-
+            var new_message = document.getElementById("message");
+            if(new_message != null){
+                console.log(new_message);
+            }
+            return false
         }
 
-        
+
     </script>
 </body>
 </html>
