--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -48,6 +48,10 @@
         }
 
 
+        window.onload = function() {
+            document.getElementById("chatroom-selection").onsubmit = changeChatRoom
+        }
+
     </script>
 </body>
 </html>
