Create the other = onsubmit = sendMessage

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -50,6 +50,7 @@
 
         window.onload = function() {
             document.getElementById("chatroom-selection").onsubmit = changeChatRoom
+            document.getElementById("chatroom-message").onsubmit = sendMessage
         }
 
     </script>
