Create     <style type=text/css>

--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -60,7 +60,14 @@
             }
         }
         
-
     </script>
+
+    <style type="text/css">
+        
+    </style>
+
+
+
+
 </body>
 </html>
