--- a/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
+++ b/WebSocket_with_ProgrammingPercy_YouTub_channel/frontend/index.html
@@ -63,6 +63,12 @@
     </script>
 
     <style type="text/css">
+
+        body{
+            overflow: hidden;
+            padding: 0;
+            
+        }
         
     </style>
 
