--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div>
         <h1>Acron Project</h1>
         <hr>
-        <h4>by: Sina Lalehbakhsh</h4>
+        <button>1-first</button>
+        <button>2-second</button>
+        <button>3-third</button>
     </div>
 </body>
 </html>
